RESOLVED FIXED132929
Tile cache has way too many tiles when pinch-zoomed in
https://bugs.webkit.org/show_bug.cgi?id=132929
Summary Tile cache has way too many tiles when pinch-zoomed in
Beth Dakin
Reported 2014-05-14 16:17:20 PDT
Tile cache has way too many tiles when pinch-zoomed in <rdar://problem/16527172>
Attachments
Patch (6.38 KB, patch)
2014-05-14 16:29 PDT, Beth Dakin
benjamin: review+
Beth Dakin
Comment 1 2014-05-14 16:29:51 PDT
Benjamin Poulain
Comment 2 2014-05-14 16:53:28 PDT
Comment on attachment 231471 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=231471&action=review > Source/WebCore/ChangeLog:14 > + This patch makes the margin sizing functions return the set margin size scaled by > + the TileGridâs scale. We also need to get rid of the old notion we used to have > + that margin tiles might be allowed to have a different size than the other tiles. > + We donât want that. They should have the normal margin size, but they should > + affect the overall coverage area. Uh, looks like there are some encoding problems here.
Beth Dakin
Comment 3 2014-05-14 16:58:56 PDT
Thank you! Fixed the encoding issue. http://trac.webkit.org/changeset/168871
Note You need to log in before you can comment on or make changes to this bug.